5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1712_2506.log
== TEST (2019-05-14 00:14:38) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	print(t)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:16:02) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	t=t+1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:16:39) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	t=t+1
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:17:05) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	t=t+1
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:17:27) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=1
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	t=t+1
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	
print(t)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:17:50) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	t=t+1
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:18:05) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	t=t+1
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 08:37:53) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	t=t+1
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:19:11) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
	elif(q==12000):
		print("LIMITE")
	t=t+1
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:19:56) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q>0 and q<12000):
	w=(g*p)/100
	q=(q+w)-r
	if(q==0):
		print("EXTINCAO")
		print(t)
	elif(q==12000):
		print("LIMITE")
		print(t)
	t=t+1
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:22:38) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	w=(g*p)/100
	q=(q+w)-r
	if(q==l):
		print("LIMITE")
	elif(q==(l-l)):
		print("EXTINCAO")
	t=t+1
print(t)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:23:07) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	w=(g*p)/100
	q=(q+w)-r
	if(q==l):
		print("LIMITE")
	elif(q==(l-l)):
		print("EXTINCAO")
	t=t+1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:26:38) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	j=(q*p)/100
	q=q+j
	if(q==0):
		print("EXTINCAO")
	elif(q==l):
		print("LIMITE")
	t=t+1

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:27:01) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	j=(q*p)/100
	q=q+j
	if(q==0):
		print("EXTINCAO")
	elif(q==l):
		print("LIMITE")
	t=t+1
print(t)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:27:36) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	j=(q*p)/100
	q=q+j
	t=t+1
	if(q==0):
		print("EXTINCAO")
	elif(q==l):
		print("LIMITE")
print(t)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:33:24) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	if(q>0 and q<l):
		q=q-r
	elif(q==0):
		print("EXTINCAO")
	elif(q==l):
		print("LIMITE")
	j=(q*p)/100
	q=q+j
	t=t+1
	
print(t)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:34:38) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	if(q>0 and q<l):
		q=q-r
	elif(q==0):
		msg="EXTINCAO"
	elif(q==l):
		msg="LIMITE"
	j=(q*p)/100
	q=q+j
	t=t+1
	
print(t, msg)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:34:54) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l):
	if(q>0 and q<l):
		q=q-r
	elif(q==0):
		msg="EXTINCAO"
	elif(q==l):
		msg="LIMITE"
	j=(q*p)/100
	q=q+j
	t=t+1
	
	print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:36:11) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	q=q-r
	j=(q*p)/100
	q=q+j
	t=t+1
	
	if(q==0):
		msg="EXTINCAO"
	elif(q==l):
		msg="LIMITE"
	
	
	print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:37:06) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	q=q-r
	j=(q*p)/100
	q=q+j
	t=t+1
	

	
	
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:37:12) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	q=q-r
	j=(q*p)/100
	q=q+j
	t=t+1
	

	
	
print(t)
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:37:30) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=-1
q=g
while(q<l and q>0):
	q=q-r
	j=(q*p)/100
	q=q+j
	t=t+1
	

	
	
print(t)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:38:59) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=-1
q=g
while(q<l and q>0):
	j=(q*p)/100
	
	q=q+j-r
	
	t=t+1
	

	
	
print(t)
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:39:04) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	
	q=q+j-r
	
	t=t+1
	

	
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:39:16) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	
	q=q+j-r
	
	t=t+1
	

	
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:41:07) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	
	q=q+j-r
	if(q==l):
		msg="LIMITE"
		print(msg)
	elif(q==0):
		msg="EXTINCAO"
		print(msg)
	t=t+1
	

	
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:41:27) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	
	q=q+j-r
	if(q==l):
		msg="LIMITE"
		print(msg)
	elif(q==0):
		msg="EXTINCAO"
		print(msg)
	t=t+1
	

	
	
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:43:12) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
	if(q==l):
		msg="LIMITE"

	elif(q==0):
		msg="EXTINCAO"

	t=t+1
	
print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:43:42) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
	if(q==l):
		q="LIMITE"

	elif(q==0):
		q="EXTINCAO"

	t=t+1
	
print(t, q)
-- OUTPUT:
14 -47.078419046495654
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:44:04) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q==0):
	msg="EXTINCAO"

	t=t+1
	
print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:45:44) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
	
print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:03) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
	
	print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:10) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
	
	print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:34) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:41) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
	print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:50) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
print(t, msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:46:59) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:47:03) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
if(q==l):
	msg="LIMITE"

elif(q<l and q==0):
	msg="EXTINCAO"

	t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(t, msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:47:27) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
	if(q==l):
		msg="LIMITE"

	elif(q<l and q==0):
		msg="EXTINCAO"

	t=t+1
print(t)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:49:52) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
	if(q==l):
		i="LIMITE"

	elif(q<l and q==0):
		i="EXTINCAO"

	t=t+1
print(t)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:50:11) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	
	if(q==l):
		i="LIMITE"

	elif(q==0):
		i="EXTINCAO"

	t=t+1
print(t)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:14:31) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q==l):
	i="LIMITE"
	print(i)
elif(q==0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:15:41) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=l):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:15:55) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=l):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.164035
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:02) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=l):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:10) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=12000):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:16:13) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=12000):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.132525
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:15) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
q=g
while(q<l and q>0):
	j=(q*p)/100
	q=q+j-r
	t=t+1
if(q>=12000):
	i="LIMITE"
	print(i)
elif(q>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:42) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(q*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j=(q*p)/100
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:16:54) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:17:01) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.149269
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:17:29) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:17:45) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:17:59) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:18:20) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:18:42) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))
l=12000
t=0
while(g<l and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.149871
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:18:57) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))

t=0
while(g<12000 and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:19:08) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))

t=0
while(g<12000 and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.170072
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:19:29) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))

t=0
while(g<12000 and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g>=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:20:40) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))

t=0
while(g<12000 and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g<=0):
	i="EXTINCAO"
	print(i)
print(t)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:20:55) 
-- CODE:
g=int(input("quantidade inicial:"))
p=float(input("percentual de crescimento:"))
r=int(input("retirados/ano:"))

t=0
while(g<12000 and g>0):
	j=(g*p)/100
	g=g+j-r
	t=t+1
if(g>=12000):
	i="LIMITE"
	print(i)
elif(g<=0):
	i="EXTINCAO"
	print(i)
print(t)

-- EXECUTION TIME:
0.192747
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
